--- a/Client/LogisticsPlatform/res/values/strings.xml
+++ b/Client/LogisticsPlatform/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">LogisticsPlatform</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="edit_query">input query</string>
+    <string name="button_send">send</string>
+    <string name="result_content">none</string>
+    <string name="title_activity_search">SearchActivity</string>
 
 </resources>
