修改结果搜索界面 以列表显示

--- a/Client/LogisticsPlatform/res/values/strings.xml
+++ b/Client/LogisticsPlatform/res/values/strings.xml
@@ -98,5 +98,6 @@
     <string name="goods_weight">Goods weight</string>
     <string name="search">search</string>
     <string name="title_activity_good_result">GoodResultActivity</string>
+    <string name="no_data">No data</string>
 
 </resources>
