--- a/Client/LogisticsPlatform/res/values/strings.xml
+++ b/Client/LogisticsPlatform/res/values/strings.xml
@@ -4,22 +4,17 @@
     <string name="app_name">LogisticsPlatform</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    
     <string name="welcome">Welcome</string>
-    
     <string name="login">Login</string>
     <string name="register">Register</string>
-
     <string name="cancel">Cancel</string>
     <string name="iphone_dlg_btn_ok_str">Confirm</string>
     <string name="iphone_dlg_btn_cancel_str">Cancel</string>
     <string name="promot_download_error_title">Error</string>
     <string name="promot_download_error_msg">Download failed, please check network connection or SD card</string>
-
     <string name="operator_ch_unicom">CUCC</string>
     <string name="operator_ch_mobile">CMCC</string>
     <string name="operator_ch_telecom">CTCC</string>
-    
     <string name="world_clock">World Clock</string>
     <string name="alarm">Alarm</string>
     <string name="stopwatch">Stopwatch</string>
@@ -45,16 +40,18 @@
     <string name="every_day">every day</string>
     <string name="alarm_alert_snooze_text">Caulk Off</string>
     <string name="alarm_alert_dismiss_text">Dismiss</string>
-    <!-- Repeat options that appear under an alarm on main Alarm Clock
+    <!--
+         Repeat options that appear under an alarm on main Alarm Clock
          screen to identify repetition schedule: special case for when
-         the alarm is set to never repeat -->
+         the alarm is set to never repeat
+    -->
     <string name="never">Never</string>
 
-
-
-    <!-- Repeat options that appear under an alarm on main Alarm Clock
+    <!--
+         Repeat options that appear under an alarm on main Alarm Clock
          screen to identify repetition schedule: concatenate days with
-         this character, i.e. "Mon, Tue, Wed" -->
+         this character, i.e. "Mon, Tue, Wed"
+    -->
     <string name="day_concat">", "</string>
     <!-- Default label to display for an alarm -->
     <string name="default_label">Alarm</string>
@@ -80,7 +77,7 @@
     <string name="message">Do you want to experience a iphone4S?Please use the Espier Launcher,and a variety of gestures,smooth sliding,A second make your phone change to iphone!</string>
     <string name="alarm_notify_text">Snooze or dismiss alarm.</string>
     <!-- Text to display in the notification ticker and label -->
-      <!-- Text to display in the notification ticker and label -->
+    <!-- Text to display in the notification ticker and label -->
     <string name="alarm_notify_snooze_label"> (snoozed)</string>
 
     <!-- Text to display in the notification when the alarm has been snoozed -->
@@ -92,4 +89,38 @@
     <string name="am_text">AM</string>
     <string name="pm_text">PM</string>
     <string name="no_sdcard">The current sd card, not with </string>
+    
+    <string name="content_description">the background of world clock </string>
+
+    <!-- Text to display in actual title of GoodActivity -->
+    <string name="goods_title">Good Search </string>
+    <string name="map_title">Map</string>
+    <string name="profile_title">Profile</string>
+    <string name="departure">Departure</string>
+    <string name="destination">Destination</string>
+    <string name="goods_type">Goods type</string>
+    <string name="goods_weight">Goods weight</string>
+    <string name="search">search</string>
+    <string name="title_activity_good_result">GoodResultActivity</string>
+    <string name="no_data">No data</string>
+    <string name="title_activity_map">MapActivity</string>
+    <string name="usr_name">Username:</string>
+    <string name="phone">Phone no.:</string>
+    <string name="role_id">identity:</string>
+    <string name="seperator">===========================</string>
+    <string name="cur_deal">Current Deal</string>
+    <string name="his_deal">History Deal</string>
+    <string name="change_password">Change Password</string>
+    <string name="change_phone">Change Phone No.</string>
+    <string name="title_activity_profile_current_deal">ProfileCurrentDealActivity</string>
+    <string name="title_activity_profile_history_deal">ProfileHistoryDealActivity</string>
+    <string name="title_activity_profile_change_password">ProfileChangePasswordActivity</string>
+    <string name="title_activity_profile_change_phone">ProfileChangePhoneActivity</string>
+    <string name="old_password">Old Password:</string>
+    <string name="new_password">New Password:</string>
+    <string name="old_phone">Old Phone No.:</string>
+    <string name="new_phone">New Phone No.:</string>
+    <string name="confirm">Confirm :</string>
+    <string name="submit">Submit</string>
+
 </resources>
