--- a/Client/LogisticsPlatform/res/values/strings.xml
+++ b/Client/LogisticsPlatform/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="welcome">Welcome</string>
     <string name="login">Login</string>
     <string name="register">Register</string>
+    <string name="forget">Forget</string>
     <string name="cancel">Cancel</string>
     <string name="iphone_dlg_btn_ok_str">Confirm</string>
     <string name="iphone_dlg_btn_cancel_str">Cancel</string>
@@ -43,22 +44,14 @@
     <!--
          Repeat options that appear under an alarm on main Alarm Clock
          screen to identify repetition schedule: special case for when
-<<<<<<< HEAD
-         the alarm is set to never repeat
-=======
-         the alarm is set to never repeat
->>>>>>> 46e79dbfff10edcb7bc82719de58462ce8d62a61
+         the alarm is set to never repeat
     -->
     <string name="never">Never</string>
 
     <!--
          Repeat options that appear under an alarm on main Alarm Clock
          screen to identify repetition schedule: concatenate days with
-<<<<<<< HEAD
-         this character, i.e. "Mon, Tue, Wed"
-=======
-         this character, i.e. "Mon, Tue, Wed"
->>>>>>> 46e79dbfff10edcb7bc82719de58462ce8d62a61
+         this character, i.e. "Mon, Tue, Wed"
     -->
     <string name="day_concat">", "</string>
     <!-- Default label to display for an alarm -->
@@ -97,19 +90,13 @@
     <string name="am_text">AM</string>
     <string name="pm_text">PM</string>
     <string name="no_sdcard">The current sd card, not with </string>
-<<<<<<< HEAD
-    
     <string name="content_description">the background of world clock </string>
 
     <!-- Text to display in actual title of GoodActivity -->
     <string name="goods_title">Good Search </string>
     <string name="map_title">Map</string>
     <string name="profile_title">Profile</string>
-=======
-
-    <!-- Text to display in actual title of GoodActivity -->
-    <string name="goods_title">Good Activity </string>
->>>>>>> 46e79dbfff10edcb7bc82719de58462ce8d62a61
+    <string name="settings_title">Settings</string>
     <string name="departure">Departure</string>
     <string name="destination">Destination</string>
     <string name="goods_type">Goods type</string>
@@ -117,10 +104,10 @@
     <string name="search">search</string>
     <string name="title_activity_good_result">GoodResultActivity</string>
     <string name="no_data">No data</string>
-<<<<<<< HEAD
     <string name="title_activity_map">MapActivity</string>
     <string name="usr_name">Username:</string>
     <string name="phone">Phone no.:</string>
+    <string name="password">Password:</string>
     <string name="role_id">identity:</string>
     <string name="seperator">===========================</string>
     <string name="cur_deal">Current Deal</string>
@@ -135,9 +122,23 @@
     <string name="new_password">New Password:</string>
     <string name="old_phone">Old Phone No.:</string>
     <string name="new_phone">New Phone No.:</string>
+    <string name="set_password">Set Password:</string>
     <string name="confirm">Confirm :</string>
     <string name="submit">Submit</string>
-=======
->>>>>>> 46e79dbfff10edcb7bc82719de58462ce8d62a61
+    <string name="result_show">Result Show</string>
+    <string name="title_activity_good_result_detail">GoodResultDetailActivity</string>
+    <string name="title_activity_profile_current_deal_detail">ProfileCurrentDealDetailActivity</string>
+    <string name="title_activity_profile_history_deal_detail">ProfileHistoryDealDetailActivity</string>
+    <string name="cur_deal_detail">Current Deal Detail</string>
+    <string name="his_deal_detail">History Deal Detail</string>
+    <string name="goods_search_detail">Good Search Detail</string>
+    <string name="submit_order">Order Submit</string>
+    <string name="notify_source">cancel or notify</string>
+    <string name="current_deal">Current Deal</string>
+    <string name="history_deal">History Deal</string>
+    <string name="title_activity_register">RegisterActivity</string>
+    <string name="title_activity_login_detail">LoginDetailActivity</string>
+    <string name="title_activity_forget">ForgetActivity</string>
+    <string name="title_activity_settings">SettingsActivity</string>
 
 </resources>
