--- a/Client/LogisticsPlatform/res/values/strings.xml
+++ b/Client/LogisticsPlatform/res/values/strings.xml
@@ -44,14 +44,14 @@
     <!--
          Repeat options that appear under an alarm on main Alarm Clock
          screen to identify repetition schedule: special case for when
-         the alarm is set to never repeat
+         the alarm is set to never repeat
     -->
     <string name="never">Never</string>
 
     <!--
          Repeat options that appear under an alarm on main Alarm Clock
          screen to identify repetition schedule: concatenate days with
-         this character, i.e. "Mon, Tue, Wed"
+         this character, i.e. "Mon, Tue, Wed"
     -->
     <string name="day_concat">", "</string>
     <!-- Default label to display for an alarm -->
@@ -96,6 +96,7 @@
     <string name="goods_title">Good Search </string>
     <string name="map_title">Map</string>
     <string name="profile_title">Profile</string>
+    <string name="settings_title">Settings</string>
     <string name="departure">Departure</string>
     <string name="destination">Destination</string>
     <string name="goods_type">Goods type</string>
@@ -138,5 +139,6 @@
     <string name="title_activity_register">RegisterActivity</string>
     <string name="title_activity_login_detail">LoginDetailActivity</string>
     <string name="title_activity_forget">ForgetActivity</string>
+    <string name="title_activity_settings">SettingsActivity</string>
 
 </resources>
