--- a/Client/Logistics/res/values/strings.xml
+++ b/Client/Logistics/res/values/strings.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">物流平台</string>
+    <string name="app_name">载什么</string>
     <string name="action_settings">Settings</string>
     
     <string name="welcome">Welcome</string>
     <string name="login">登陆</string>
+    <string name="logout">登出</string>
     <string name="register">注册</string>
     <string name="forget">忘记密码</string>
     <string name="cancel">取消</string>
+    <string name="error_invalid_password">密码应大于4位</string>
     <string name="iphone_dlg_btn_ok_str">Confirm</string>
     <string name="iphone_dlg_btn_cancel_str">Cancel</string>
     <string name="promot_download_error_title">Error</string>
@@ -123,8 +125,8 @@
     <string name="cur_deal_detail">当前交易详情</string>
     <string name="his_deal_detail">历史交易详情</string>
     <string name="goods_search_detail">货运信息详情</string>
-    <string name="submit_order">Order Submit</string>
-    <string name="notify_source">cancel or notify</string>
+    <string name="submit_order">确认</string>
+    <string name="notify_source">确认</string>
     <string name="current_deal">当前交易</string>
     <string name="history_deal">历史交易</string>
     <string name="title_activity_register">RegisterActivity</string>
