--- a/Client/Logistics/res/values/strings.xml
+++ b/Client/Logistics/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="register">注册</string>
     <string name="forget">忘记密码</string>
     <string name="cancel">取消</string>
+    <string name="favorite">收藏</string>
     <string name="error_invalid_password">密码应大于4位</string>
     <string name="iphone_dlg_btn_ok_str">Confirm</string>
     <string name="iphone_dlg_btn_cancel_str">Cancel</string>
@@ -141,5 +142,5 @@
     <string name="xlistview_header_last_numb">更新数目：</string>
     <string name="xlistview_footer_hint_normal">查看更多</string>
     <string name="xlistview_footer_hint_ready">松开载入更多</string>
-
+	<string name="refreshtime">推送时间</string>
 </resources>
