--- a/Client/Logistics/res/values/strings.xml
+++ b/Client/Logistics/res/values/strings.xml
@@ -6,11 +6,13 @@
     
     <string name="welcome">Welcome</string>
     <string name="login">登陆</string>
-    <string name="logout">登出</string>
+    <string name="logout">注销</string>
     <string name="register">注册</string>
     <string name="forget">忘记密码</string>
     <string name="cancel">取消</string>
     <string name="favorite">收藏</string>
+    <string name="myfavorite">我的收藏</string>
+     <string name="quit_favorite">取消收藏</string>
     <string name="error_invalid_password">密码应大于4位</string>
     <string name="iphone_dlg_btn_ok_str">Confirm</string>
     <string name="iphone_dlg_btn_cancel_str">Cancel</string>
