--- a/Client/Logistics/res/values/strings.xml
+++ b/Client/Logistics/res/values/strings.xml
@@ -3,7 +3,6 @@
 
     <string name="app_name">载什么</string>
     <string name="action_settings">Settings</string>
-    
     <string name="welcome">Welcome</string>
     <string name="login">登陆</string>
     <string name="logout">注销</string>
@@ -12,7 +11,7 @@
     <string name="cancel">取消</string>
     <string name="favorite">收藏</string>
     <string name="myfavorite">我的收藏</string>
-     <string name="quit_favorite">取消收藏</string>
+    <string name="quit_favorite">取消收藏</string>
     <string name="error_invalid_password">密码应大于4位</string>
     <string name="iphone_dlg_btn_ok_str">Confirm</string>
     <string name="iphone_dlg_btn_cancel_str">Cancel</string>
@@ -46,10 +45,7 @@
     <string name="every_day">every day</string>
     <string name="alarm_alert_snooze_text">Caulk Off</string>
     <string name="alarm_alert_dismiss_text">Dismiss</string>
-    
     <string name="never">Never</string>
-
-    
     <string name="day_concat">", "</string>
     <!-- Default label to display for an alarm -->
     <string name="default_label">Alarm</string>
@@ -136,7 +132,6 @@
     <string name="title_activity_login_detail">LoginDetailActivity</string>
     <string name="title_activity_forget">ForgetActivity</string>
     <string name="rememberpassword">记住密码</string>
-    
     <string name="xlistview_header_hint_normal">下拉刷新</string>
     <string name="xlistview_header_hint_ready">松开刷新数据</string>
     <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
@@ -144,5 +139,7 @@
     <string name="xlistview_header_last_numb">更新数目：</string>
     <string name="xlistview_footer_hint_normal">查看更多</string>
     <string name="xlistview_footer_hint_ready">松开载入更多</string>
-	<string name="refreshtime">推送时间</string>
+    <string name="refreshtime">推送时间</string>
+    <string name="title_activity_web_display">网站信息</string>
+    
 </resources>
