--- a/Client/LogisticsPlatform_stable/app/src/main/res/values/strings.xml
+++ b/Client/LogisticsPlatform_stable/app/src/main/res/values/strings.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">载什么</string>
+    <string name="app_name">哪找货</string>
     <string name="action_settings">Settings</string>
     <string name="welcome">Welcome</string>
     <string name="login">登录</string>
     <string name="logout">注销</string>
     <string name="register">注册</string>
     <string name="forget">忘记密码</string>
+    <string name="pwd_find">密码找回</string>
     <string name="cancel">取消</string>
     <string name="button_return">返回</string>
     <string name="favorite">收藏</string>
@@ -106,8 +107,8 @@
     <string name="seperator">===========================</string>
     <string name="cur_deal">当前交易</string>
     <string name="his_deal">历史交易</string>
-    <string name="change_password">更换密码</string>
-    <string name="change_phone">更换手机号</string>
+    <string name="change_password">修改密码</string>
+    <string name="change_phone">修改手机号</string>
     <string name="title_activity_profile_current_deal">ProfileCurrentDealActivity</string>
     <string name="title_activity_profile_history_deal">ProfileHistoryDealActivity</string>
     <string name="title_activity_profile_change_password">ProfileChangePasswordActivity</string>
@@ -118,7 +119,8 @@
     <string name="new_phone">新手机号:</string>
     <string name="psw_confirm">密码确认:</string>
     <string name="set_password">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码:</string>
-    <string name="confirm">确认:</string>
+    <string name="confirm">确&#160;&#160;&#160;&#160;认:</string>
+    <string name="confirm1">确认</string>
     <string name="submit">提交</string>
     <string name="result_show">结果显示</string>
     <string name="title_activity_good_result_detail">GoodResultDetailActivity</string>
@@ -127,6 +129,7 @@
     <string name="cur_deal_detail">当前交易详情</string>
     <string name="his_deal_detail">历史交易详情</string>
     <string name="goods_search_detail">货运信息详情</string>
+    <string name="details">详情</string>
     <string name="submit_order">确认</string>
     <string name="notify_source">确认</string>
     <string name="current_deal">当前交易</string>
@@ -142,7 +145,7 @@
     <string name="xlistview_header_last_numb">更新数目：</string>
     <string name="xlistview_footer_hint_normal">查看更多</string>
     <string name="xlistview_footer_hint_ready">松开载入更多</string>
-    <string name="refreshtime">推送时间</string>
+    <string name="refreshtime">提醒间隔</string>
     <string name="title_activity_web_display">网站信息</string>
     <string name="title_activity_rss">订阅</string>
     <string name="questionforpassword">密保问题： </string>
@@ -151,10 +154,28 @@
     <string name="cities">订阅城市</string>
     <string name="add_city">添加</string>
     <string name="delete_city">删除城市</string>
-    <string name="pushlist">推送记录</string>
+    <string name="pushlist">提醒消息</string>
     <string name="title_activity_truck">车源</string>
     <string name="title_activity_profile_pushlist">推送历史</string>
     <string name="hint_your_address">您的地址</string>
     <string name="hint_your_dep">请输入出发地</string>
     <string name="hint_your_des">请输入到达地</string>
+
+    <string name="details_dep">出&#160;&#160;发&#160;&#160;地：</string>
+    <string name="details_des">到&#160;&#160;达&#160;&#160;地：</string>
+    <string name="details_pub_t">发布时间：</string>
+    <string name="details_dead_t">截止时间：</string>
+    <string name="details_name">货物名称：</string>
+    <string name="details_type">货物类型：</string>
+    <string name="details_vol">货物体积：</string>
+    <string name="details_wei">货物质量：</string>
+    <string name="details_type_v">货车类型：</string>
+    <string name="details_len_v">货车长度：</string>
+    <string name="details_pack">包装方式：</string>
+    <string name="details_fee">预计费用：</string>
+    <string name="details_contact">联系方式：</string>
+    <string name="details_danger">注意事项：</string>
+    <string name="details_note">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;备注：</string>
+    <string name="login_website">登录网站链接</string>
+
 </resources>
