--- a/Client/LogisticsPlatform_stable/app/src/main/res/values/strings.xml
+++ b/Client/LogisticsPlatform_stable/app/src/main/res/values/strings.xml
@@ -100,7 +100,7 @@
     <string name="title_activity_good_result">货运结果</string>
     <string name="no_data">No data</string>
     <string name="title_activity_map">货运信息</string>
-    <string name="usr_name">用&#160;&#160;户&#160;&#160;名:</string>
+    <string name="usr_name">用  户  名:</string>
     <string name="phone">手机号码:</string>
     <string name="password">密码:</string>
     <string name="role_id">身份:</string>
@@ -118,8 +118,8 @@
     <string name="old_phone">旧手机号:</string>
     <string name="new_phone">新手机号:</string>
     <string name="psw_confirm">密码确认:</string>
-    <string name="set_password">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码:</string>
-    <string name="confirm">确&#160;&#160;&#160;&#160;认:</string>
+    <string name="set_password">密        码:</string>
+    <string name="confirm">确    认:</string>
     <string name="confirm1">确认</string>
     <string name="submit">提交</string>
     <string name="result_show">结果显示</string>
@@ -140,7 +140,7 @@
     <string name="rememberpassword">记住密码</string>
     <string name="xlistview_header_hint_normal">下拉刷新</string>
     <string name="xlistview_header_hint_ready">松开刷新数据</string>
-    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
+    <string name="xlistview_header_hint_loading">正在加载…</string>
     <string name="xlistview_header_last_time">上次更新时间：</string>
     <string name="xlistview_header_last_numb">更新数目：</string>
     <string name="xlistview_footer_hint_normal">查看更多</string>
@@ -160,9 +160,8 @@
     <string name="hint_your_address">您的地址</string>
     <string name="hint_your_dep">请输入出发地</string>
     <string name="hint_your_des">请输入到达地</string>
-
-    <string name="details_dep">出&#160;&#160;发&#160;&#160;地：</string>
-    <string name="details_des">到&#160;&#160;达&#160;&#160;地：</string>
+    <string name="details_dep">出  发  地：</string>
+    <string name="details_des">到  达  地：</string>
     <string name="details_pub_t">发布时间：</string>
     <string name="details_dead_t">截止时间：</string>
     <string name="details_name">货物名称：</string>
@@ -175,7 +174,13 @@
     <string name="details_fee">预计费用：</string>
     <string name="details_contact">联系方式：</string>
     <string name="details_danger">注意事项：</string>
-    <string name="details_note">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;备注：</string>
+    <string name="details_note">        备注：</string>
     <string name="login_website">登录网站链接</string>
+    <string name="title_activity_main_fragment">MainFragmentActivity</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_good_fragment">GoodFragmentActivity</string>
+    <string name="title_activity_map_fragment">MapFragmentActivity</string>
+    <string name="title_activity_rssfragment">RSSFragmentActivity</string>
+    <string name="title_activity_profile_fragment">ProfileFragmentActivity</string>
 
 </resources>
