--- a/Client/LogisticsPlatform_stable/app/src/main/res/values/strings.xml
+++ b/Client/LogisticsPlatform_stable/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="MissingTranslation">
 
     <string name="app_name">哪找货</string>
     <string name="action_settings">Settings</string>
